# PackageKit

./: configure.ac
backends/: Makefile.am
backends/neko/: Makefile.am  pkgtools.cc  slackpkg.cc
